examples/errors/mod_f32/main.lc

function main() {
    const a = 0.3f % 0.2f;
}
